# ai-sales-mcp-demo

./: .gitignore  AI_INTEGRATION_README.md  AI_INTEGRATION_SUMMARY.md  BATCH10_IMPLEMENTATION_SUMMARY.md  BATCH11_IMPLEMENTATION_SUMMARY.md  BATCH9_IMPLEMENTATION_SUMMARY.md  CLEANUP_SUMMARY.md  COMPLETE_APP_README.md  COMPLETE_APP_STATUS.md  COMPLETE_FIX_SUMMARY.md  COMPREHENSIVE_TEST_REPORT.md  END_TO_END_TEST_REPORT.md  FINAL_FIX_SUMMARY.md  FINAL_TESTING_SUMMARY.md  FINAL_WORKING_VERSION.md  FIX_STREAMLIT_ISSUES.md  GIT_SETUP_INSTRUCTIONS.md  GMAIL_INTEGRATION_FIXES.md  GMAIL_SETUP.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  INSTRUCTIONS_BATCH1.txt  INSTRUCTIONS_BATCH2.txt  INSTRUCTIONS_BATCH3.txt  INSTRUCTIONS_BATCH4.txt  INSTRUCTIONS_BATCH5.txt  INSTRUCTIONS_BATCH6.txt  MCP_CONCEPTS.md  README.md  SETUP_GUIDE.md  STREAMLIT_DEPLOYMENT_GUIDE.md  SYSTEM_STATUS.md  TEST_EXECUTION_REPORT.md  ai_integration.py  analytics_models.py  api_gateway_quick_fix.py  basic_server.py  batch8_summary.json  beautiful_streamlit_app.py  create_docs_dir.sh  (+40 more)
api/: api_gateway.py  api_gateway_backup.py
config/: demo_config.py  gmail_config.py
scripts/: test_gmail.py
servers/: analytics_server.py
src/: integration_server.py  voice_gateway.py
tests/: simple_test.py  test_analytics_server.py  test_basic_server.py  test_crm_server.py  test_integration.py  uv_test.py  working_analytics_test.py  working_crm_test.py  working_test.py
ui/: streamlit_app.py  ui_components.py
